@@ -1,5 +1,8 @@
 2002-03-24  Don Porter  <dgp@users.sourceforge.net>
 
+	* library/tcltest/tcltest.tcl:  Use [interpreter] to set/query the
+	executable currently running the tcltest package.  [Bug 454050]
+
 	* library/tcltest/tcltest.tcl:  Allow non-proc commands to be used
 	as the customization hooks.  [Bug 495662]
 
